# rawllm

./: .env.example  .gitignore  .gitmessage.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOLOBIONT_ROADMAP.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  cli.py  metrics.jsonl  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_light.py  system_prompt.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yaml  publish.yml
core/: __init__.py  config.py  context_repository.py  docker_sandbox.py  llm_client.py  llm_client_openai.py  llm_protocol.py  metrics.py  plugin_manager.py  prompt_builder.py  reflection.py  sandbox_wrapper.py  taor_loop.py  tool_executor.py  tool_management.py  utils.py
core/agents/: __init__.py  recommender.py
core/llm/: __init__.py  factory.py  protocol.py  registry.py
core/llm/clients/: __init__.py  anthropic.py  openai_compat.py
docker/sandbox/: Dockerfile
plugins/: http.py
scripts/: gemini_smoke.py  smoke_all.py
tests/: test_agent_recommender.py  test_cli.py  test_config.py  test_context_repository.py  test_core_init.py  test_docker_sandbox.py  test_http_plugin.py  test_llm_clients.py  test_metrics.py  test_plugin_manager.py  test_plugin_manager_critical_coverage.py  test_prompt_builder.py  test_reflection.py  test_run.py  test_sandbox_wrapper.py  test_taor_loop.py  test_tool_executor.py  test_tool_management.py  test_utils.py
